[package]
name = "xilem-to-do-mvc-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.5", features = ["android-game-activity"] }
xilem = { git = "https://github.com/linebender/xilem", branch = "android-kb-accesskit" }

[features]
default = []
desktop = []

[lib]
name="main"
crate-type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="to_do_mvc"
required-features = [ "desktop" ]

[patch.crates-io]
accesskit = { git = "https://github.com/AccessKit/accesskit", branch = "android-basics" }
accesskit_atspi_common = { git = "https://github.com/AccessKit/accesskit", branch = "android-basics" }
accesskit_consumer = { git = "https://github.com/AccessKit/accesskit", branch = "android-basics" }
accesskit_macos = { git = "https://github.com/AccessKit/accesskit", branch = "android-basics" }
accesskit_unix = { git = "https://github.com/AccessKit/accesskit", branch = "android-basics" }
accesskit_windows = { git = "https://github.com/AccessKit/accesskit", branch = "android-basics" }
accesskit_winit = { git = "https://github.com/AccessKit/accesskit", branch = "android-basics" }
dpi = { git = "https://github.com/mwcampbell/winit", branch = "android-kb-backport" }
winit = { git = "https://github.com/mwcampbell/winit", branch = "android-kb-backport" }
